--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
+pymongo==3.7.1
+setuptools==39.0.1
+redis==2.10.6
+celery==4.1.1
+jsonpickle==0.9.6
+python_telegram_bot==11.1.0
+pip==9.0.1
 pytest==3.6.3
 selenium==3.10.0
-beautifulsoup4==4.6.0
-codecov>=1.4.0
-pytest-cov>=2.4.0
+beautifulsoup4==4.6.3
+telegram==0.0.1
+typing==3.6.6
