--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ before_install:
 script:
     - python setup.py build
     - python setup.py install
-    - pytest -v --cov=. Tests/ --junitxml=coverage.xml
+    - pytest -v
 after_success:
     codecov
