--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,4 @@ before_install:
 script:
     - python setup.py build
     - python setup.py install
-    - pytest -v --cov=. Tests/ --junitxml=coverage.xml
-after_success:
-    codecov
+    - pytest -v
