--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
 before_install:
     - curl -sSL https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py | python
     - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-
+    - source $HOME/.poetry/env
 script:
     - poetry install
     - pytest -v
