--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ python_telegram_bot = { version = "~11.1.0" }
 celery = { version = "4.1.1" }
 beautifulsoup4 = { version = "4.6.3" }
 typing = { version = "3.6.6" }
-arrow = "^0.12.1"
+arrow = "^0.11"
+ics = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.8.0"
