--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,10 @@
 dist: xenial
-
 addons:
     chrome: stable
-
 language: python
-
 stages:
     - linting
     - test
-
-python:
-    - 3.6
-
-before_install:
-    - curl -sSL https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py | python
-    - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-    - source $HOME/.poetry/env
-
-install:
-    - poetry install
-
-script:
-    - pytest -v
-    - black --check --verbose .
-
 jobs:
   include:
     - python: "3.6"
@@ -33,5 +14,18 @@ jobs:
       install:
         - pip install pre-commit
         - pre-commit install-hooks
+        - poetry install
       script:
         - pre-commit run --all-files
+    - stage: test
+      python: "3.6"
+      before_install:
+        - curl -sSL https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py | python
+        - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+        - source $HOME/.poetry/env
+      install:
+        - poetry install
+      script:
+          - pytest -v
+          - black --check --verbose .
+
