--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,13 @@ dist: xenial
 addons:
     chrome: stable
 language: python
-stages:
-    - linting
-    - test
 jobs:
   include:
-    - python: "3.6"
-
     - stage: linting
       python: "3.6"
+      before_install:
+        - curl -sSL https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py | python
+        - source $HOME/.poetry/env
       install:
         - pip install pre-commit
         - pre-commit install-hooks
@@ -24,6 +22,7 @@ jobs:
         - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
         - source $HOME/.poetry/env
       install:
+        - pip install poetry
         - poetry install
       script:
           - pytest -v
