--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ beautifulsoup4 = { version = "4.6.3" }
 typing = { version = "3.6.6" }
 arrow = "^0.11"
 ics = "^0.5.0"
+flask-restful = "^0.3.8"
+fakeredis = "^1.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.8.0"
